# janken-online-predictor

./: README.md  main.ipynb  main.py  pyproject.toml
app/: model_utils.py  visualization.py
static/: script.js  style.css
templates/: index.html
