[tool.poetry]
name = "janken-online-predictor"
version = "0.1.0"
description = "LSTMとオンライン学習を用いた5種じゃんけんWebアプリ"
authors = ["sasa-leaf <shunsan3suke@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pillow = "^11.0.0"
numpy = "^1.26.0"
matplotlib = "^3.9.2"
tensorflow = "^2.17.0"
nest-asyncio = "^1.6.0"
pyngrok = "^7.2.0"
scikit-learn = "^1.5.2"
jinja2 = "^3.1.4"
japanize-matplotlib = "^1.1.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"